// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme autodetection of different filenames updates readme.markdown 1`] = `
"# A title

# API

<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

### Table of Contents

*   [foo](#foo)
    *   [Parameters](#parameters)
*   [bar](#bar)
    *   [Parameters](#parameters-1)

## foo

A function with documentation.

### Parameters

*   \`a\`  {string} blah

Returns **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global\\\\_Objects/Number)** answer

## bar

A second function with docs

### Parameters

*   \`b\` &#x20;

# Another section
"
`;

exports[`readme command --diff-only: changes needed 1`] = `
"# A title

# API

<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

### Table of Contents

-   [foo](#foo)
    -   [Parameters](#parameters)
-   [bar](#bar)
    -   [Parameters](#parameters-1)

## foo

A function with documentation.

### Parameters

-   \`a\`  {string} blah

Returns **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)** answer

## bar

A second function with docs

### Parameters

-   \`b\`  

# Another section
"
`;

exports[`readme command --readme-file 1`] = `
"# A title

# API

<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

### Table of Contents

*   [foo](#foo)
    *   [Parameters](#parameters)
*   [bar](#bar)
    *   [Parameters](#parameters-1)

## foo

A function with documentation.

### Parameters

*   \`a\`  {string} blah

Returns **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global\\\\_Objects/Number)** answer

## bar

A second function with docs

### Parameters

*   \`b\` &#x20;

# Another section
"
`;

exports[`readme command updates README.md 1`] = `
"# A title

# API

<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

### Table of Contents

*   [foo](#foo)
    *   [Parameters](#parameters)
*   [bar](#bar)
    *   [Parameters](#parameters-1)

## foo

A function with documentation.

### Parameters

*   \`a\`  {string} blah

Returns **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global\\\\_Objects/Number)** answer

## bar

A second function with docs

### Parameters

*   \`b\` &#x20;

# Another section
"
`;
